[project]
name = "my-dora-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dora-rs",
    "gitpython>=3.1.45",
    "ipython>=9.7.0",
    "matplotlib>=3.2.2",
    "maturin>=1.10.0",
    "numpy<2.0.0",
    "opencv-python>=4.1.1",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "psutil>=7.1.3",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "tensorboard>=2.4.1",
    "thop>=0.1.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
#    "torchaudio==2.7.1",
    "tqdm>=4.64.0",
    "ultralytics>=8.3.227",
]

# 以下は特定の CUDA & PyTorch の組み合わせを使う必要がある場合に必要
# https://docs.astral.sh/uv/guides/integration/pytorch/

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
